fix: change z-index value for selectArrow

--- a/src/app/components/common/selectLabelAbove/selectLabelAbove.module.css
+++ b/src/app/components/common/selectLabelAbove/selectLabelAbove.module.css
@@ -37,7 +37,6 @@
 .selectArrow {
     position: absolute;
     right: 16px;
-    z-index: 2;
     bottom: 14px;
     font-size: 12px;
     pointer-events: none;
